--- a/Source/MatrixGrid/Form1.resx
+++ b/Source/MatrixGrid/Form1.resx
@@ -117,7 +117,218 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAADgCAYAAAD17wHfAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABVDSURBVHhe7Z2tkyTFFsXnH8ARMQqFGDFixbhVKBRmDRqH
+        QqzawCNwa3AoBHIlehUKwz+AQmBRCIKIfvurNzlT03O7u7LqZObNrHsiznvAzPRHVZ7K+51Xh4AL/P33
+        34c//vjj8Ouvvx7evXt3+Omnnw7ffffd4fXr14evv/768Pnnnx/u7u4On3766eHjjz8+fPTRR4erq6uJ
+        /DPkv9/c3Bxevnx5+OKLL6a/4+95HV6P1+X1eR/eL+ADIcKK+O+//yYBvH///vD27dvDV199NQkriakF
+        eX8+B5/nl19+mT7fv//+e/+JAzUQIiyIP//8c1rY3377bXOx5fL29nb63OyeCDNQDiFCIRDdzz//PJmB
+        1sLunV9++eVk1oYotQgRbgBmG6YlftfcR9sLv/nmm2mn/+eff+6vSGANQoSZIKCBifbq1StzYe6VBI6w
+        AiLgk48Q4QKw4/HExxyzFmDwKREkD6rYIZchRHgGv//++2RyWQstuIxEXn/77bf7KxqwECI8Ak9vgg/k
+        3KxFFVzPH3/8MXZHAyHCexDxe/Pmjbl4glpiXUSE9RG7FyGmUgRZ2pCqnjBVdyxCyrco77IWR7AuuQ/c
+        j71idyLkydtb9cpeiBj3uDPuRoREOj/77DPz5gd9kRTHnnzG4UX4119/TWFy62YHfZPyvz0k/4cW4fff
+        f2/e3GBfpMNjZAwpQqpbrJs5ElP/4PX19bP+wlE5avBmKBFiehL2tm5gD8RnxQTjyZ8acPFl+V6YZSS6
+        6Uk8B37O7/H7/B1/z+tQ18nrkqPr2TfGtRgt4T+MCKnGsG6aR7JzIQYqc4gGIpYWQKiIFIFSqEAPofV5
+        PZKH1CjoXoQsYO8pB3YediF2JO+BBorVESYPNe9FDBTUj7Ardi1CdhLr5nggXen0Gva+SDBvESUPEa87
+        Jde5Z3QpQha2N9+PAAkLdfT8FpYH5qs3vxJzuld0J0J8KOsmtCKTzPZajIwgsUa87JBMomvlX29BVyJk
+        p7Eufm3iK/VuAqnBgwgT3LpetUmKqid0IUL8Eg/mJ8n/Hp+0NcG9wlxlV7KuYS1iofQC9yJkglnrBlsW
+        1aX8XOA5iAZTB2pd0xrkwd3DfXMtQm6idXFrEOH3ZtZ4BdHVVukOAmberRe3ImT3sS5qaYb4ygG/sZVb
+        wYPAK1yKEHveupClifAD5UGE+8WLF+Y9KEmvwTR3ImwxvZqAS/h89dGi0N7jg9aVCGvP9eT9ItrZHrUt
+        H1JdnuBGhLWjaJHn8wWi4DVn/nhKYbgQYc2LT0I54Bc164G9rIXmIqxVg0jTq+cIWeARuAi11oUHITYV
+        Ya0LzalJgf7www8/mPdTzdZCbCbCWsnb8P36BtaLdV/VbOkjNhFhjTQEfuYeJnXtATQa13hot4qaVhdh
+        jUr7nop3A8tRo4umRR6xqghrzIGJkrOxgXth3Xcla6+haiKscfH22ly7N3CfrfuvZM1IehURlr5oDHrC
+        bwjsB4w4ubm5MdeDirWqqYqLEHFYX1BFSs8C+wT1viUrreioqVFTXFyEJXOBPQ/3CehQsuaYqGxpFBVh
+        ycLc2uFkzB/MkxHmXI6Ikof+0GVTEsVEWDIQQ5S1BhCddYQ2JXBM0KbzP+AHJfPPJYs+ioiQJLn1RRSk
+        wLcGlhYSUxQQUVk/KLkjlir+KCLCUl0R3gQ4JztjVOj4QCkhEoUvAbkIS1U11DRBrfdfSoqOA+1RapZN
+        iWosqQhLFdvWDMJYPuAaRuF4e5Q6KEh9rr5UhCXmg9ZOQygP2yQ9E/5iO5CjLjWzVpk/lImwRDqidiKe
+        9IP1ObYSfzFSG22w1b04Re6pChIRljBDGYlXGyWjurCWXxt4ilJukipFJRFhiXMHWkQaS4sQYu6Gv1gf
+        pYZJK7D5VUq0J7Xyo2qIMDH8xfpgzIl1L7ZQMRpjkwhLLNqWw1lrijCRhRH+Yj2UiJhufZhuEqE6KUrZ
+        UUu0EGFi+It1UOIeY9VswWoRqp3dTz755P6V26GlCBPDXyyPEnXNW7rxV4tQfUSyB//Igwgh1R7hL5YF
+        KQbr2m/hWqz6S/VBHl5MMS8iTKRQIfzFclAWZsC1JYurRKj88BR7e4E3ESbWKlzfG0rkD9c8NLNFqM63
+        1JrjsQReRQjxmaN/UQ/1CM41Bd7ZIrTeeC29RQQ9izARf5ETjAIaUANqXectZB3lIEuEa/rsTpHAjjf0
+        IMJEnuDhL2qgjpbmJvCzRGi94Vpij3tDTyJM9HjybI9Qj9nP2Q0Xi/Ddu3fmm62hsgJdiR5FCK+vr+U9
+        bnuDutsixzdcLEICA9abrWGuzVwLvYowkdav8BfXg6lq1nVdy6XuwiIRKm1mz+MfehdhIk/hmEieD3WQ
+        ZmngcZEIlVOOPWMUESaGv5gPdQpuCS7+FuVT1ouvofdFMZoIIec1hL+YB+s6ruWSWuCLIlQNPoLeMaII
+        E/EXPRVGeIYyCLmkw+KsMpSHufRgGo0swkT8xRqHnPQOIs7W9VvDS8X4Z0WofCL0gD2IMJF7GzgN5dq/
+        dJbFWXWoJmn30rC6JxFC/EWPRRNeYF2ztTyHkz8l32S92Br2Ei7fmwgTmZAQ/uJzsHlY12sNzxXfnxSh
+        apy9YhBOLexVhImljwDrDcqYyLnRLSdFqOoZ7KmCY+8iTAx/8RHKVqdTFqEpQlWzI203PSFE+EimkoW/
+        qM2Tn8oZmiJU1dBtGX7TAiHC58Rf5LrsGaoj37mWFkwRqg7R6A0hwtOsfTy5JyjTFVaO9plSVNtvTwGZ
+        hBDhZfZm3SigDNBYUdJnIlSFZXv0J0KEy7hHf1E1ItHanJ6JUNUx0SNChHkk7L4Xf5EdzLoGubSGXD9R
+        C02I1h/mcs3EKQ8IEa7jXo4It777Gh4XRjwRoUrtvZoqIcJtHN1fVHUUHedhn4hQlZroFSHC7Rz5yDfV
+        hInjGUtPFKM4NsrrEKclCBHqyDoYzV9URknnePg3lT/Ys0kSItRzNH+R5mjre+Zy7hc+iJARCNYv57Ln
+        p1+IsAxHOiJcNYNmfj0eRKjID3J2fc8IEZblCP6iqphl3rHyIELFqbs9VsnMESKsw96PCLe+Uy7Jxyc8
+        iND6xVz2HqIOEdZlLxMXjqE6Jj5h+ifV4uu9OztEWJ/4i70d+aY6GCnpZRKhKijTO0KE7djTkW+qftv0
+        8JmUo4j4ELrtHSHC9iSu4N1fVI3LTycwTyJUtPCP0G8WIvRD70eEv3jxwvzcOUyBzEmEis6JEfJAIUJf
+        JOXl1V9UtDal8S+TCBWd9CPUC4YIfdKjv6gIzqS2piuVfdvLbNFzCBH6Juabl3Wm6jgCV4ohv1ajYo8I
+        EfZBD+eaqIZjT2tOEW7tbbThKYQI+yEP/pZHvqk6KqYyOKpcrB/msPdytYQQYX9seeSb4gj5KUevyBGO
+        0q4SIuyXLY58U8wjnTZBxZkTo4w1CBH2z5oj/ClEtz5DDqdNUJGoH6VXLEQ4Bkmk15hzxO5rvX8OpxZC
+        RdJxlBmUIcKxWNpfVPTgTnOdFO36vXdPJIQIx2SpmIUqqHmlcC5DhEHvPHc+4Foopq9NfuXt7a35wxz2
+        3CU9R4hwbKqbiBVVM5M7qMh11A4Nl0KIcHwqy94UhS6TCBUn8o6CEOH4VKbTFEOfMJNDhDOECMensrpL
+        JsLj/7iGoyBEOD5PnZa7Booi7vsUof3DHI6CEOH4ZNGrIBNhmKOPCBGOT2WEVGGOhgiPECIcn8oJEDIR
+        KlIUI3TVgxDh2FRPBFSkKKZkvWJqVCTrg95JZZgaimR9lK0dIUQ4JksIECjK1qZODMVcfW+TsNYiRDge
+        5wevqKEo4Ka4PFqZZggRjsXSDb6KsYfR1HuEEOEYrDXqYuoFNN4/hzworqbt0PhhDmuOFCiJEGHfrD30
+        6c2bN+bnyOHkV05KNH6Yw/mpoz0jRNgnGZffYvwhoz6tz5PDKc2hakwcASHC/thyEPDNzY35mXI4lb4p
+        Eo6lQsC1ESLsh/h9LYtElMdHXGFDWz/M5QgIEfrnq1evXOSlVWsFTP9r/TCXI1TNhAj90tsxaQoLkmo1
+        MImQL2j9Ug5HyBWGCH3SwwEwx1AENFMt6yRCtnjrl3I4QpoiROiL5LC9NgcoBv+mrMIkQsULKscGtEKI
+        0Ac9Hgp6DMXp1mnjmkSo2FpHiJCGCNuSE6O9Ho99DOvz5zLlNicRKpxM2DtChO1IHWYvUIy1gKw3MCmH
+        yKb1S7nsPTgTIqxPSr96i6wruidgwsM/KTrsPUaxchAirEd8ql5b4BRNDwRDEx5EqGhpUo6Ta4EQYXle
+        X19333WjKFeb11s/iHDqazJ+OZc9I0RYluqzIFpAtUbmD6IH1aiCM8ppVrURIixDCvxHmUOkaHiA89K7
+        J1uX9cu57PlpFyLUEr+v54eyBYU/COd48m+K/qie84UhQh179/tOgVym9X1zeHxW4hMRKrrsIYu5R4QI
+        t3MEv+8UFMN+4XEW4YkIVX6h8vipmggRrifR9V4fvkvBA8b67rk8NtGfGqcfYP1RLuc5kJ4QIswn7sdo
+        ft8pKAZlw2M8+y+KOaSwx2hYiHA5OcOkV4tnDVTN71gMx3gmQkUxN+yxtSlEuIzEDvYGlSlqPbieiVC1
+        EHuMkoYIz5OoHtdoj1BUyUDr+j03UD/g5cuX5gvksrfawBChTdbDCJMT1kIVFT21MZkiVG29vc0jDRE+
+        5578vlNQJehPtWuZIlQ5obAnhAgf+fbt2/ursm+oRhvCU1PiTqrk7u7OfKFc9vQkDRH+vxPG8lv2ClWg
+        Ej2dwkkRqroqzr25N+xZhNynPft9p6AKyJybHHBShMoF2cvN3asIw++zwQwY63qt4bmBxWedNuYiWi+Y
+        y16affcmQvy+GkeI9QrV+qcx4hzOilDVOwV7SFfsRYTh912GKi0BL1kaZ0UIrBddQ6tcxxtGFyG1j+H3
+        LQOFCdY1XMNLuPgbmCzWC6+h991wZBH2WEbYCqqRhpDB2pdwUYTKnKF333BEEVIwEX5fHlRNDHDJxnN5
+        r/wA5Yfy3PYykghrHx09CpS+4KWATMIiEaqafeHSD9YCI4iQvFb4feuhGPGSuHSk/yIRAlVRN/R63kDv
+        Igy/bxtYl9Z1XUOOG1yKxSJUpiuY9u0RvYqw9dHRo0AxhT4x54G4WISA6cnWG66hx4FAvYkw/D4dVJ1D
+        iTnI+m2SjtYbriWL3hN6ESF+XzpWK7Ad6vueeyZLnmQ/QLllp+OCvaAHEfZ+6I5HqMrTEnOR/Rfq3dBT
+        8bBnEXo+OrpnqNfzmodkvmw/4Pb21vwAa+llMptHETI+srcxIb1AdS5nIhPo1mCVCJWhXOjFLPUkQsz+
+        Xo6O7hVqM3StVbdKhEBxcP6cHnJcXkTY09HRvULVMZ+IdbgWq0WoLO9JbB1uby3C8PvqQFmgnbglWr1a
+        hIDzxq0PtJaE3luilQgplQq/rx6UEX64tTFhkwjVji1E2K1QW4QUP4TfVxfKPsFE1s0WbBIhUNvWsJV/
+        WFOE4ffVh2p42ZyKIwE2ixAoi7sTW7Q81RAhO/0oR0f3BOXQpsScIu1zkIiwRJAG1l6sJczrxBGPju4F
+        ysb0OVUtYxIRAuUYjERmotSEctpyIscrj3p0dA8g2kwS3bo3W7hkbMVSyEQIVINS56ydyFcmcD12iuwN
+        JVwlHqxKSEVYyix9/fr1/TuUh6KWkMly4fe1ByV/1v3ZSrVbIRUhUPdlJdY64WmLSbqno6O9QzkXac4S
+        B+XIRQjUJW2JtU6Iza2NxecIv88PSuQCYamDb4uIsGSov5aftVSIezw62jNKCRBuTcqfQhERAnWnxZy1
+        Et34dZgfx2VO5If47+H3+UJJAZasbComQoAfZ30hBWtXnCA4noQhPJ8o5QPCEn7gHEVFCJRzHI8ZpmAA
+        lFxjRFhLo7gISZZaX07F3s7FD+jA2iqRB0ykwL4GiosQlOjfmrNmHjHgA7gGJM2t9aBirf7WKiIEJQM1
+        sIbZEPAB5bEMp1jzKIFqIgQEU6wvrCIjBkqFkQM+UKJ17pi1JwBWFSGg8NX64krGgShjgvEf1v1WskWf
+        Z3URgpL5nMRomh0HWDclAzCJrYJ8TUQIShXXzrl19kegPUrHEhLZZVuhmQhBqRrTOanrjKLqPlHD/IQt
+        5xqBpiIEFMVaF0bNSOz3Ax6a6olop9hagKC5CEENex/e3d3FaEHnKFnqeEwPAgQuRAhq7YiwdC1gIB9E
+        tEsn3+dUjqfYCjciBDV8xEQ6IeKMv/agIL5GtHxObw9hVyIENaKmcxJBjQR/G5SawnCOHlNX7kQImNFi
+        XcCSxBeJcyDqgCkE1j0oTU9nYc7hUoSgRmWNxZiQVg7k/AiOWde9ND1XUbkVISgxtnwpMVsY+hTYjpbi
+        I9jT+rSvS3AtQlBifHkOceLDZ1wHzD/1qc45JNDXg4vhXoSAJ1mt5O0p0rMYlTeXQbSzRcDlmC3L0HLR
+        hQgTSs4RWUoKC3jCRxDnKbBYaqcaTtFrAOYUuhIhKN2TmEN2xz3nGqk+wlyvmWQ/R3K/3v0/C92JEGAW
+        ljjkYwsxf/YgSIRHHW5LX8+ilxK0NehShAlezJ9j8rkwiXp8Kh8Ds5voJikjBh9Z37c1e59+3rUIQavE
+        71JiIrFL9iJKAivs6Ox2NcsI15ATtEaYA9u9CAE3QnmkWWnyWfGleIBgWrfKR5J6QXDkY/FvW0egc9hb
+        8OUchhBhgvdd8RwRAHWz7JrsQiwyzEBEilh40GAaXhIsP+d3+Rv8NypFeB2EhvAxlWu1jpUgn3+E3W+O
+        oUQIWIQ46dYNHIkEpohK4qfx/94CVWry/UYNfA0nwgR2kJo9isFyHH0qwrAiTMCss25s0D/pptlDyeDw
+        IkzwUEoVXEYOeNlTieBuRAjwFwlOWDc+2J64D3sc3LwrESYQXQsx+iHi23P53y5FmEDIP8zUdiRfGkcW
+        7FyEcxDAadV4ujeSQorRk48IER6BJ3OLGTejk1wmHTCjJdoVCBGeAIuFKpPYHbeRB1qYnOcRIlwAwuUE
+        ckavSlGR8jvM+2h8XoYQYSZ4qiNIL42sXojwOMAz5vHkI0S4AQQX8HNILlsLc2RiFdB5QdF87HjbECIU
+        gYVIroshwqPWrDLjBz95T9UsNRAiLASqczBd2Slpv+nNnyQglZqRI51QFiHCiiDiijDxndgx8aNubm5M
+        EdQiYuMhgZ/busl4rwgROgGjLxAoQkCkVPIw1wW/CzOQURMIhnEZVv8g/85/R9Q07eKnIi7+HsGzI/O6
+        qVE48nVecDj8D+7+LM4gJntAAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANsAAADmCAYAAABcZ/AzAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABb0SURBVHhe7Z2vjxxHE4bzD0QyPwUZHA0JtIFRmOlBS8Em
+        psFhQYFGYcExDnD+g5DAoIRYliJZiiJFinSfns1X69m52t2Z3a7u6p63pEf+cbc7Pd31TndXV/d88vff
+        f98LIeKR2ISohMQmRCUkNiEqIbEJUQmJTYhKSGxCVEJiE6ISEpsQlZDYEvPPP/+sxvsekQOJrQEmjH//
+        /XcHZn/n/z98+HD//v37+99///3+119/vf/ll192/Pzzzw+wn/F7/P6ff/65+/yp7wevXCIWiS0Yc3oz
+        /o0oEMiPP/54/+23396/evXq/vnz5/eff/75/aNHj+4/+eSTq+F7+D6+l+/nOj/88MPuulyfcpiZCL3y
+        i3JIbAUxYZm46GVw7u+//37n8M+ePXOF0YonT57sykX5KCe9KWb3IAGWRWK7EushcM7ffvtt11t9/fXX
+        91988YXr4Nmh3JSf++B+7AHCnxLfdUhsKzHnw+i5fvrpp51zMmTznLd3bm9vd/fHfU57PglvPRLbAqYC
+        Y77D3Ie5kOeco8N9c//0epiEtxyJ7QQ4EiAw5jXMcTwH3CrUB/Xyxx9/7OvKq0fxHxLbDOvF/vrrr/s3
+        b97c393duY4mDqHHo76oN+pPvd1DJLb/g3NgDI+++eYb16HEMpjj2TBTovvI5sVmwx8CAFudh0VBfVKv
+        Vsde/W+JzYqNxmfIw2R/1EhiFqhf6tmGmF57bIHNic1ExsT+5ubGdQ4RA1kt1PtWRbcZsdG4zB94wn76
+        6aeuM4g6UP+IzoJRXnuNyPBiswYlI6JU3qEoA+1BBNMehF77jcSwYqPxMDLjtT6WG9qH3ExsZNENKTaM
+        hdavvvrKbVyRE9rLFsi9du2docRmQ8bXr1+7jSn6gPYbcWg5jNgwhiIK448Buw9saOm1d490LzZ7+inr
+        Y0zY9Dpt557pWmwYxwGoNxsbejnaGfP8oBe6FBtPOUxzs21Be2O99nLdiY2JM5sYlce4TWh32r/HiGVX
+        YsNYN1MGyLah/fEDzPOTrHQjNmxLw0Y7HYtDgthTxxrUy5cvdwf0GPyb/+fn/B5HGGwpS8aGlZ6/ZCS9
+        2Gx8jmN5Fd4zX3755f50K7aiEOpmUdfOfbzE+Byf53v4Pr6X7+c62U73KgF+MfWTzKQWG+Pyd+/eDZFu
+        hbBYniAXkI2V3J+ZLeAa83q4BPsuvhvsOvyM61MOyjOCAJ8+fdrFPC6t2Kg4wr29Dot4QLBGxNyCU7jM
+        2UsK6lKmIgQc9e3btzvx9XoEH36Cv3A/3j1nIKXYMJzUq9TMMHdiCw8HBGEmLu8es2ECxOj5GHrSG3v3
+        mZnMgZN0YsPYDuNVZEZwSAQ27728e+uFqfAYxiO8nobyDJEx795akkpsGA3rVWAmGLIwRKQHwynBu58R
+        mA456fE4zMerk2zgR5h3T61IIzbsu+++cysuCwQTtnxcG/eL0Yv3cHZLtqWBFGLDMguNuRhh9NF7sTVY
+        XRBYyRzRzCS45mLDsgrtxYsX+20eW+vFlmK9HYGJrCl0+Bfmlb8mTcWGZRQaTiORrWMquozLBxl6uGZi
+        w7IFQ0h3YliESWSXYcPLjAcsMc/EvHLXoInYMAINXoW0gicfAtOcrAzUI4GkbJt6Wy4LVBcbjZBpwZp5
+        GXmErRpgdDCWDDItkON/LR6qVcXGDZJS41VAC3jKUSYNGWOxEUOmaQMPgNqCqyY2KpwcvAzjeEL5ZEa0
+        eLptGYxEgAxLBfgh/ljzQVtVbBlSfiyzQL1ZG6yXIwPHa5+asFtgOLFhrfejPX78eDd0wLwyirpgLK94
+        bVUT/BLzyliacLFhRPq8G60FQRAiY+rN8oBliVTWyqMMFRvDhdZPLxbNKYeElgcsW0KzpeN55S1FmNhw
+        bhJWvRurRdatFlsGy7hzgEOE8NfIh3KY2HhKtMyVs3Qrr2yiDVjmLTpEqTGv7CUIERvWap7G20RbrKGI
+        09AePeyFi5y/FRcb3XCrhWtyG7V+lg+sl02nwMM6YjgZ0rO12FSI0KLH3GI9vQkN2LWQXmxYi3Au4pbQ
+        8oH1JjSDRXfMu69LKSa2VsNHhFY77UacB+tVaAb+XNKviomNeVLtTYMEQ8jYl9ByMYLQgPTCkvP/ImKj
+        QC2ijyS1Smi5GEVoBtHJUoK7Wmw4O72LV9BIaqz4i3WMJjSj1OjparFhvEnFK2QUygzJB5ZtV3YpSiUr
+        XyU21F479zHLSUniI9ioQjPw82t7t6vEVjsoQvY+5pVFtAEbceg4Bz+/dtpysdi4cM1De9iPxnUVEMkD
+        NnqPNsWO0fDqYglX9WyfffaZW6gISq95iOvIIDQOEeJlj97PIsDfvbpYykViQ92cwecVKIJam/vEMrDW
+        QuMcEzYE1y4Lfn9p73aR2LjJWgf3aJ6WC6z1HI0ejbLYSAfn5zwR73dLg9/j/9M6WcpqsXFj9DReQSJQ
+        KlYesAxDx/kRF/ydTH3v9yO4tHe7qGcjTcorRGkYj1/aZYuyZBCaDR29hy9WqxO4dO62Smw4fq25moaP
+        ecAyC83AP2sdl8i7DNZ2BKvEht3e3roXLw2bQDV8bA/Wg9CAn9faeYIOMK8cx1gsNm6EN7x4Fy5NyeRP
+        cTlYL0IzapYZPazpEBaLDeNAFO+iJWF/2pobEDFgrYVGhJGyrPWHDx8+7E7L8r6zJGsPCFokNm62VrSn
+        1RtGxEew3nq0KTVjC2vOK1kkNgpfo/KjjxIT58FaC80L768Fn62Rt0tdLe0cFomNG/cuVBqlZLUlg9Cu
+        6dGmIIAaMQaGq5TXK8Ocs2Kj0DUSjtkTh3llEPFgrYXGHK2E0AysxksYl64HnxUbViMwol6tHdhoQgO+
+        q8ZbbpdOf06KjcLWOPJAC9jtwEYZOnpgNXq3JUcnnBQbXWONFJgSu2DFerCRhQZ8b42525J8yZNiw6gM
+        78tLwVNnyXhXlAVrLTRSqyKFZvD90ad0oxPMu75xVGwUkKPivC8uiZKN64ON3qNNwb9qrLudO1rxqNhq
+        FJDdAzUqW3wki9DI8qjZ9lzPK0tJzg0lj4oNi36/mr0V1Lu+KA+2laHjHCx60yt6wbzrw1Gx1XhrqI4O
+        rwfGyyK8dqhFK6EB16yRcohuvOuDKzYKFn2QyrmngCgH1rpHi1hHWwsWvd8N3Ry7R1dsWHSXe8nmO7Ee
+        bItzNA/8LXopC90c82tXbPxydKj0VHcryoC1HjrSo2UQGlCG6CQNdLNYbBQoemyrjJF4sC3P0Y6BRQf+
+        ji0BPBAbqmSI531JKTSEjAXTHM0Hv4seSh7zb1ds0fM1nS8SB6ah43EoU3SyxrF52wOxYZGb7kjPwubX
+        FdeDZRg6ZhWagRAio5LoB5tf94HYotfXtJAdA6Y52jLwv+i68gKAB2KjkqLft6YM//JgGeZo2Xs0gzJG
+        73Pz/PxAbCg+evLIk296TXEdmOZo64kewXnHMR6IDXv16pX74RIoa6QsmOZol4FFbipFR9j0mg/EFjlx
+        1HytHFhroREI6GGO5hE9b0NH2PSaD+Zs3gdLsfYEWeGDqUe7Dsodnf87r5u92PhB9PrDuc114jwSWhko
+        e3Sm1HxXy4HYoiOREtp1ZBAaQ8fehTbFu8dSzCOSe7Exho3cma3gyHVg6tHKgkUGSeY7tw/EFtmYp7Ye
+        iNNgElp58MfI1ETazBUb9vLlS/dDJTh3PoPwwSS0GPDHyNEcesLsegc9W+TWA1bsR2usaDCWS7z6rMVo
+        c7Qp3FPkmZLoye3Z+M/IDaNrXq0jcvRoIwsNuK/IN5XON5LuxQaPHj1yP1QCbatZTgahjTp0nMK9Re7c
+        Rk/T6+3FFpkrtua1OltHQqsLfunVQSmm2f87sVGp9DzeL5fg9vZWvdoCsNZzNIY+WxEacJ/4p1cXJZiO
+        6PZii1xNX3IO+tbBNEerD4Z/evVRgmnW1F5skRNFLWifBtPQsQ1YZBR++t7BvdgiU7X0VtHjYArvtwPD
+        P716KcE0ZWsvtsidq+ztmYZAxX9gmqO1BYvcwzldX64iNqVqPQTTHK09+GVkylZ1sXE+hsT2kQxCY45G
+        WHrLQgP8MvL8FomtIViGOZqE9h8S26BkENrW52hzJLYBySA0zdEegl8ONWfbejQyi9A0dHwIflk9Ghm5
+        zjbf17MlMAktL1jkPk53nS1SbHd3d7ubmt7kFsA0R8sNhn96dVcCV2yRuZFbfJkGpjlafrDIc0im+zj3
+        Yovc10Ojb2nOhmno2Af4Jb2/V4cleJD1D+/fv3d/uQTzTXQjk0FoOI+Etpybmxu3HkuAruw6e7HV3EQ3
+        KlmEpqHjcvBLrx5LMd00vRcbjXMbuIlu9DNIMghNQ8d1UE+RsQr0NG2LvdgYu0ZuoptGZUZDQusT6ioy
+        Co+eprGKvdiwyH09o760HtMcrU/wR/zSq9MSzPdxHvRsNU+HHQFMc7R+wR8jd1/M0xQPxBb51tEXL17s
+        nNOu1zuYerS+wfBLr25LMH/76EGAJPJ0WMKro/RsmITWP/jj48eP3fotwfx9hAdii4zMwAgHtWKvX792
+        768WEtr1UHeRa8swj8Dvxbb/D+dDpZhmQPcIph5tDKi/yEgkzK95IDYscq3Ne4N+L2CthabwfjmiYxTo
+        CJte84HYIieMvR5ph2noOBZY5NYaLyB4IDbUHvn05sz/3pwFay00npISWlmoy8gXyaCj+SjuQGwUIPoN
+        +tMTYrOTQWj0aFpHKwt1GR0MREfzNnsgNs4m9z5cil7mbZiCIWOC/0W+cRSmZ/wbB2IDChK55aCHXdtY
+        hh6N0LSEVh4sMjXx2JryA7FFFwQYFs2vmwVMc7Sxid5OdiwQ6PZskSFR8MazGcAUdRwb6jXyJDk4NlV6
+        IDYKE73Yx9Fh2PzaLcEktPHBIhPu4dh2sgdiMwjTe19UCu+arcAktG1A/UbGJNCNd11wxYZFLm7DPEmz
+        FZjmaNuA+o0eQp5K3HDFViM0miGbBFOPth2wyNOPAd148zVwxUbDRy/6AU7mXb8GWAahKbxfj+goJMwz
+        /accnbOhTpzB+8JSnHoKRCKhbQ/8LPIIBKBNT/nzSbFFv7CvxeGtGYSmOVp98LPIk4/h3NEfR8WGI0Qv
+        AcCxMGkEGYSmOVp9qGtycr32KMk5Xz4qNkClkZnRUCtQgmnouE2w6MAIOjk3SjspNizyrYzGqUllCbAM
+        Q0cJrT7Ud+R7LIwlL/w8KTYKWmMoyYo+5pXhWjDN0bYLFh17gCXToZNiA74gOioJPH1KOyOmoeN2oc6p
+        e69dSkIbL2nfs2Kja6zhsHTDmFeGS8AktG2D1diTiJ+dG0LCop6txpgXSvVuWPTOhXNojtYehu5e25Rm
+        qd+eFRtg0bmSUGI3AKY5msBqBPe8g32OsUhsOE10AqdxzRklmIaOgrqPPt7DWHMW6iKxAWPSyKOajefP
+        ny8a/86R0ISBRZ82AIxg1vjqKrHVcmZ2cq+5CUxzNAHUf43lKlh7eNVisQFnh3gXLQ2r8dPXo54ii9A0
+        R8sBbcAIw2un0iz1UWOV2LAak05YshSAqUcTBlZr9HXJUtUqseFQtSaecGpVHpPQhFHbNy9ZplolNsCi
+        D0wxjq3MY62FRrBIQssDc6foLTTGpemFq8VW+wky764xzdHEFKxmJNo77XgJq8UGWK3eDVjL4MmFaego
+        ptAONfaqGdckzV8kNm6wVgoXWHRSQhMetIvXXhFck1J4kdgAqxWZhFrh3GNojpYPLPIda3MuiUBOuVhs
+        UGvdrTUITXO0XGDRxy3OufYdFVeJjXlU66FdNBo65gO/q5UlYuDna7JFPK4SG+CErYd4UUho+aAtasYL
+        4NgS1FquFhtqr7UjoCaao+WDtiBQxhGIXptFYdFwr0xruFpsgNWcqEajHi0nODy7Qrw2iwK/xrzyrKWI
+        2HDKd+/euYXtDYTGvUhouUBoLR7oJR+6RcQGVEbt6FBpGDpKaPnAaiZRGKWPxy8mNsBqd/Ol0BwtJ1jN
+        9VwDP8a8Ml1KUbHhqDXzJkuhOVpOsBZCg0vzH09RVGzQ23BSc7Sc4EethMbbbkoOH43iYgMKWuM0rmvR
+        HC0ftAX+E302/zHw2wihQYjYqLDsqVyao+XD2qLVg5r3YeO3UT4RIjbg6ZB1sVtCywdtQf7pkydP3Dar
+        ASlgUb0ahIkNsBrHP69BQ8d84OC8yejm5sZtsxrgp5hXvlKEig2oyLu7O/cGayOh5QPj6EKvvWqBf2Je
+        +UoSLjYcm3EwUT/vRmtCOLdGpYrz4Bc8iFtFHA38knzLGg/gcLEBN8IwwbvZmpC9zRZ6Ca4tiIwHX60D
+        ek4R/SLOKVXEBlRwloAJh8NQnlqVLP6D+sbevHnjtkttSmXzL6Wa2ADLstmUpyr7ojCvrKIsODXTiSy7
+        Q0i8qN32VcUGWOtx+hTbgateLoZsvRnw2l/MK28k1cUGOHem/W+s7bDGgkl05cCYm2WJRkOJdwBeShOx
+        AYLL1AhAQ7A00KoxRoG2JcJX48Xxa4hMxVpCM7EZGSJScwigULaWDdMj1BeQyMtZn17dtoItM61HLU3F
+        xs3zBMwoOGASTfkkutNQP7Qli9MZD39CaJRz02IDKoAo1bNnz9yKag0pRARRTHStGywTVh8EP2ofwrMU
+        HuS1Fq3P0VxsYBWRVXAG+XMkMGNbFR33jeHA9PwZMoOOgdCszPP7aEEKsQEVAj0cq0Ak1aKXW+jtuD/u
+        EyPjosV5IGsh+GY+5d1TC9KIDaxRa7x8vATMTwimWM7lSMKbCozenF4s+8jD4GFI2b37akkqsRlUVA9P
+        zyn0yDgkwqP8PQpvKjCWQJiL9bDjfgoJExmFBinFBli2vXBLoQegx2OoafeSUXxTcfF3krQJBvUwlPeg
+        zjHvXjOQVmyAZUrzuRR6B5wY8bEb2RzcBBgtQruGXRcjAoy46I0ZtnMkgFf2XmDZAfPuPwupxQYYTppt
+        kfQaCJOTrYIAyTxn6GlnX0yFOMUE4zH/Xfs8P+N7SbjmOlyP67Y8eqA0+AUPDe7X859MpBcbUJH0CL1M
+        0C+FMDpDOCb4zD0YRiMQMjJ4ciOYOfw/P+f3GEbxOT7P92QOy5cAf7CRguc32ehCbGBP8d4CJyIG/MB6
+        b89fMtKN2Ays9ZkVoi09zM88uhMb8ERjHjL6sFIcQnvT7r0MG+d0KTawYWWvywNiHbSztbnnDz3QrdgM
+        jGglx9R5jST6hiCPpcZ57d8T3YsN7ImX6bgFcT20Z++92ZQhxGZgrLloLtc3tN+IRw4OJTbgKcgEmswI
+        ryFFbmi33kL6SxlObAYNxoKn1uX6gHbqaYH6EoYVG/B0xNiD1Vv2+lagXWgfbMTebMrQYjNMdKQ3ZT3v
+        ZGvQDrQHNrrIjE2IzaBRGabQyAqitOHp06e7+h91XnaKTYnNmPZ0ve7d6g3qeWs92ZxNis0w0RFmznRC
+        80hQrxbG36rIjE2LzTDRkXdHWlDLN2COAPVHPdqLS7YuMkNim4BTWOiZzPJsx6Nnh/qi3qi/Lc7JziGx
+        HcF6Ow6+YWOmAio+BDyoH/Vi55HYzmC9HcZ6ELuht758wP1TD7Y+pl5sGRLbCqbC40nOcQQjHJZzDu6P
+        +ySVyvaTSWDrkdguZCo8/s02EJ72o8zzuA/uh/vi/jAJ7DoktkJMxcffGWLR85Hzl33YyXyUclJeyk35
+        MYmrLBJbECY+gxdR4Mgs7BJQwLlrnoDFdbge1+X6b9++3ZXH3s5jSFxxSGwVwZGnIsT4N2c7cnYki7+I
+        kYNpmR8xjOPtnWyiRCQGZz9O/83P+T1+n8/xeb6H75ueSYlNRQVeOUUMElsSzPnBBDHHM+/3YPp93vVE
+        fSQ2ISohsQlRCYlNiEpIbEJU4e/7/wFYWXyCicvj6QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>467, 17</value>
+  </metadata>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="menuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>572, 17</value>
   </metadata>
 </root>
